--- a/前端/register.html
+++ b/前端/register.html
@@ -116,7 +116,7 @@
 <body>
     <div class="useless">1</div>
     <div class="register">
-        <img src="background1.jpg" class="background1">
+        <img src="../../../../前端/background1.jpg" class="background1">
         <div class="register_info">
             <h2>Register</h2>
             <div class="username">
