--- a/前端/个人中心.html
+++ b/前端/个人中心.html
@@ -159,7 +159,7 @@
     </div>
     <div class="main">
         <div class="change_page">
-            <div class="history"><a href="个人博客.html">历史博客</a></div>
+            <div class="history"><a href="../../../../前端/个人博客.html">历史博客</a></div>
             <div class="info_centre"><a href="个人中心.html">个人中心</a></div>
         </div>
         <div class="information">
