--- a/Last/src/main/webapp/个人博客.html
+++ b/Last/src/main/webapp/个人博客.html
@@ -174,7 +174,7 @@
             width: 66px;
             height: 66px;
             border-radius: 33px;
-            background-image: url("../../../../前端/头像.jpg");
+            background-image: url("头像.jpg");
             background-size: cover;
         }
 
@@ -213,14 +213,14 @@
         .remark .share {
             width: 70px;
             height: 70px;
-            background-image: url("../../../../前端/转发.png");
+            background-image: url("转发.png");
             background-size: cover;
         }
 
         .remark .comment {
             width: 70px;
             height: 70px;
-            background-image: url("../../../../前端/评论.png");
+            background-image: url("评论.png");
             background-size: cover;
             margin-right: 30px;
         }
@@ -228,7 +228,7 @@
         .remark .like {
             width: 70px;
             height: 70px;
-            background-image: url("../../../../前端/点赞.png");
+            background-image: url("点赞.png");
             background-size: cover;
             margin-right: 30px;
         }
